--- a/unix/Makefile
+++ b/unix/Makefile
@@ -2,3 +2,7 @@ install:
 	ln -sf $(CURDIR)/.gitignore ~/.gitignore
 	ln -sf $(CURDIR)/.gitconfig ~/.gitconfig
 	ln -sf $(CURDIR)/.emacs ~/.emacs
+	ln -sf $(CURDIR)/.zshrc ~/.zshrc
+
+	mkdir -p ~/.oh-my-zsh/custom/themes
+	ln -sf $(CURDIR)/themes/victortorres.zsh-theme ~/.oh-my-zsh/custom/themes/victortorres.zsh-theme
