improvements in emacs, virtualenvwrapperand hgrc

--- a/unix/Makefile
+++ b/unix/Makefile
@@ -3,6 +3,7 @@ install:
 	ln -sf $(CURDIR)/.gitconfig ~/.gitconfig
 	ln -sf $(CURDIR)/.emacs ~/.emacs
 	ln -sf $(CURDIR)/.zshrc ~/.zshrc
+	ln -sf $(CURDIR)/.hgrc ~/.hgrc
 
 	mkdir -p ~/.oh-my-zsh/custom/themes
 	ln -sf $(CURDIR)/.oh-my-zsh/custom/themes/victortorres.zsh-theme ~/.oh-my-zsh/custom/themes/victortorres.zsh-theme
