--- a/unix/Makefile
+++ b/unix/Makefile
@@ -4,6 +4,7 @@ install:
 	ln -sf $(CURDIR)/.emacs ~/.emacs
 	ln -sf $(CURDIR)/.zshrc ~/.zshrc
 	ln -sf $(CURDIR)/.hgrc ~/.hgrc
+	ln -sf $(CURDIR)/.tmux.conf ~/.tmux.conf
 
 	mkdir -p ~/.oh-my-zsh/custom/themes
 	ln -sf $(CURDIR)/.oh-my-zsh/custom/themes/victortorres.zsh-theme ~/.oh-my-zsh/custom/themes/victortorres.zsh-theme
