tmux conf to share buffer with macOS clipboard

--- a/unix/.tmux.conf
+++ b/unix/.tmux.conf
@@ -1,2 +1,7 @@
 set -g mouse on
+set -g mode-keys emacs
+
+bind-key -T copy-mode C-w               send-keys -X copy-pipe-and-cancel "pbcopy"
+bind-key -T copy-mode M-w               send-keys -X copy-pipe-and-cancel "pbcopy"
+bind-key -T copy-mode MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "pbcopy"
 
